RESOLVED FIXED190093
RenderLayer::removeOnlyThisLayer() should not call updateLayerPositions()
https://bugs.webkit.org/show_bug.cgi?id=190093
Summary RenderLayer::removeOnlyThisLayer() should not call updateLayerPositions()
Simon Fraser (smfr)
Reported 2018-09-28 14:51:11 PDT
RenderLayer::removeOnlyThisLayer() should not call updateLayerPositions()
Attachments
Patch (3.42 KB, patch)
2018-09-28 14:54 PDT, Simon Fraser (smfr)
no flags
Archive of layout-test-results from ews100 for mac-sierra (2.44 MB, application/zip)
2018-09-28 16:46 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews107 for mac-sierra-wk2 (3.20 MB, application/zip)
2018-09-28 16:56 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews117 for mac-sierra (3.22 MB, application/zip)
2018-09-28 17:04 PDT, EWS Watchlist
no flags
Patch (7.21 KB, patch)
2018-09-28 17:22 PDT, Simon Fraser (smfr)
zalan: review+
Patch (7.28 KB, patch)
2018-09-28 17:31 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2018-09-28 14:54:40 PDT
Simon Fraser (smfr)
Comment 2 2018-09-28 15:11:45 PDT
Bug 25252 is related.
EWS Watchlist
Comment 3 2018-09-28 16:46:05 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 4 2018-09-28 16:46:07 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 5 2018-09-28 16:56:55 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 6 2018-09-28 16:56:57 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 7 2018-09-28 17:04:44 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 8 2018-09-28 17:04:46 PDT Comment hidden (obsolete)
Simon Fraser (smfr)
Comment 9 2018-09-28 17:12:52 PDT
Comment on attachment 351116 [details] Patch css3/blending/repaint/blend-mode-turn-off-isolation.html shows an actual failure.
Simon Fraser (smfr)
Comment 10 2018-09-28 17:22:56 PDT
Simon Fraser (smfr)
Comment 11 2018-09-28 17:31:50 PDT
WebKit Commit Bot
Comment 12 2018-09-28 18:53:43 PDT
Comment on attachment 351149 [details] Patch Clearing flags on attachment: 351149 Committed r236632: <https://trac.webkit.org/changeset/236632>
Radar WebKit Bug Importer
Comment 13 2018-09-29 11:56:28 PDT
Ryan Haddad
Comment 14 2018-10-01 12:45:20 PDT
It looks like the three isolation tests rebaselined in this change are now failing on iOS Simulator (which has its own set of baselines): https://build.webkit.org/results/Apple%20iOS%2012%20Simulator%20Release%20WK2%20(Tests)/r236674%20(159)/results.html
Simon Fraser (smfr)
Comment 15 2018-10-01 12:49:30 PDT
(In reply to Ryan Haddad from comment #14) > It looks like the three isolation tests rebaselined in this change are now > failing on iOS Simulator (which has its own set of baselines): > https://build.webkit.org/results/ > Apple%20iOS%2012%20Simulator%20Release%20WK2%20(Tests)/r236674%20(159)/ > results.html I'll fix.
Ryan Haddad
Comment 16 2018-10-01 14:25:36 PDT
(In reply to Simon Fraser (smfr) from comment #15) > (In reply to Ryan Haddad from comment #14) > > It looks like the three isolation tests rebaselined in this change are now > > failing on iOS Simulator (which has its own set of baselines): > > https://build.webkit.org/results/ > > Apple%20iOS%2012%20Simulator%20Release%20WK2%20(Tests)/r236674%20(159)/ > > results.html > > I'll fix. Rebaselined in https://trac.webkit.org/r236692
Note You need to log in before you can comment on or make changes to this bug.